--- a/src/components/styles/carousel.css
+++ b/src/components/styles/carousel.css
@@ -45,7 +45,7 @@
     line-height: 2;
 }
 
-.carousel .carousel-content input[type="text"] {
+.carousel .carousel-content input[type="email"] {
     width: 300px;
     height: 50px;
     background: linear-gradient(rgba(0, 0, 0, 0.16), rgb(0, 0, 0), rgb(1, 7, 32));
