--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -56,7 +56,7 @@
 
 .header .navbar li input {
     height: 2.5rem;
-    display: none;
+    /* display: none; */
 }
 
 .header #btn-nav {
@@ -70,12 +70,12 @@
     cursor: pointer;
 }
 .navbar .btn-logout{
-    width: 10rem;
-    color: black;
-    height: 3.5rem;
-    margin: 0;
-    padding: 0;
+    color: white;
+    /* height: 3.5rem; */
     cursor: pointer;
+    /* margin-right: 1rem; */
+    margin: 1rem;
+    padding: 1.4rem;
 }
 .navbar span{
     color: white;
