--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.575), rgb(1, 7, 32));
+    /* background: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.575), rgb(1, 7, 32)); */
     color: white;
     position: sticky;
     top: 0;
@@ -34,6 +34,12 @@
 
 .header h1 {
     font-size: 2rem;
+    color: red;
+}
+.header h1 span{
+    font-size: 4rem;
+    font-family: 'Nosifer', sans-serif;
+    color: rgba(212, 7, 7, 0.817);
 }
 
 .header .navbar {
@@ -89,7 +95,7 @@
            display: inline-block;
            width: 100%;
            height: auto;
-           background-color: lightcyan;
+           /* background-color: lightcyan; */
     }
 
     .header .logo,
