Card and Card overview section designed

--- a/src/components/styles/cardOvervies.css
+++ b/src/components/styles/cardOvervies.css
@@ -1,12 +1,17 @@
 .movie-overview{
     /* border: 2px solid red; */
-    height: 75vh;
+    /* height: 75vh; */
     box-sizing: border-box;
+    position: sticky;
+    top: 0;
+    z-index: -1;
 }
 .movie-poster .movie-poster-img{
     width: 100%;
     height: 70vh;
     position: relative;
+    background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 7, 32));
+    opacity: .4;
 
 }
 
