--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* background: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.575), rgb(1, 7, 32)); */
+    background: linear-gradient(rgba(0, 0, 0, 0.623), rgba(0, 0, 0, 0.692), rgba(1, 7, 32, 0.811));
     color: white;
     position: sticky;
     top: 0;
@@ -17,7 +17,7 @@
     align-items: center;
     width: 100%;
     /* height: 100px; */
-    padding: 1.4rem;
+    padding-left: 1rem;
 }
 
 .header .logo.btn-nav {
