--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -1,12 +1,13 @@
 .card{
-    /* border: 10px solid green; */
     width: 20rem;
     height: 15rem;
+    padding: 1.4rem;
+    position: relative;
 }
 .card img{
     width: 100%;
     height: 100%;
-    border-radius: 0.5rem;
+    border-radius: 0.2rem;
 }
 .card:hover{
     transform: scale(1.2);
@@ -14,3 +15,15 @@
     transition: transform .5s ease;
     /* backdrop-filter: blur(100px); */
 }
+.card .card-content{
+    background: linear-gradient(rgba(0, 0, 0, 0.623), rgba(0, 0, 0, 0.692), rgba(1, 7, 32, 0.811));
+    font-size: 1rem;
+    position: absolute;
+    text-align: center;
+    display: block;
+    /* width: 100%; */
+    height: 40px;
+    top: 60%;
+    
+}
+
