--- a/src/components/styles/cardOvervies.css
+++ b/src/components/styles/cardOvervies.css
@@ -1,22 +1,20 @@
 .movie-overview{
     /* border: 2px solid red; */
-    /* height: 75vh; */
     box-sizing: border-box;
-    position: sticky;
-    top: 0;
-    z-index: -1;
+    position: relative;
+    
 }
 .movie-poster .movie-poster-img{
     width: 100%;
-    height: 70vh;
+    height: 300px;
     position: relative;
     background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 7, 32));
-    opacity: .4;
-
+    opacity: .7;
+    border-radius: 1rem;
 }
 
 .movie-description{
     position: absolute;
-    top: 50%;
+    top: 70%;
     left: 10%;
 }
