--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -1,4 +1,5 @@
 .card{
+    /* border: 2px solid red; */
     width: 20rem;
     height: 15rem;
     padding: 1.4rem;
@@ -27,3 +28,11 @@
     
 }
 
+/* ------------ Responsive ----------------------- */
+@media screen and (max-width: 572px) {
+    .card{
+        width: 90%;
+        margin: 3rem;
+        padding: 1rem;
+    }
+}
