--- a/src/components/styles/cardOvervies.css
+++ b/src/components/styles/cardOvervies.css
@@ -5,15 +5,15 @@
     color: white;
     background: linear-gradient(rgb(3, 5, 6), rgba(6, 5, 15, 0.84), rgba(39, 25, 65, 0.813));
     
-
 }
+
 .movie-poster .movie-poster-img{
     width: 100%;
-    height: 250px;
+    /* height: 250px; */
     background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 7, 32));
     opacity: .7;
     /* border: 2px solid yellow; */
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
     
 }
 
