--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -21,6 +21,7 @@
     align-items: center;
     flex-direction: column;
     width: 40%;
+    color: white;
     background: linear-gradient(rgba(0, 0, 0, 0.447), rgba(0, 0, 0, 0.301), rgba(1, 7, 32, 0.379));
 }
 .form input, .form button{
@@ -33,21 +34,23 @@
     border-radius: 1rem;
     outline: none;
     caret-color: white;
-    color: white;
 }
 .form input{
     background: linear-gradient(rgba(87, 109, 143, 0.537), rgba(55, 72, 83, 0.66), rgba(116, 139, 135, 0.379));
     border: 1px solid #0b3c5172;
+    /* color: white; */
+    /* text-decoration-color: white; */
 }
+
 
 .form input::placeholder{
     color: white;
 }
-.form input:focus{
+/* .form input:focus{
     font-size: 1rem;
     transition: .6s ease;
     color: white;
-}
+} */
 .form .btn-login{
     margin-top: 2.4rem;
     color: black;
