--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -1,13 +1,12 @@
 .card{
-    /* border: 2px solid red; */
-    width: 20rem;
-    height: 15rem;
-    padding: 1.4rem;
+    padding: 1rem;
+    margin: 1rem;
     position: relative;
 }
 .card img{
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
+    width: 150px;
     border-radius: 0.2rem;
 }
 .card:hover{
