--- a/src/components/styles/cardOvervies.css
+++ b/src/components/styles/cardOvervies.css
@@ -3,17 +3,17 @@
     border-radius: 0.2rem;
     /* border: 1rem solid green; */
     color: white;
-    background: linear-gradient(rgb(3, 5, 6), rgba(6, 5, 15, 0.84), rgba(39, 25, 65, 0.813));
-    
+    background: linear-gradient(rgba(2, 69, 102, 0.854), rgba(6, 5, 15, 0.84), rgba(39, 25, 65, 0.813));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .movie-poster .movie-poster-img{
-    width: 100%;
-    /* height: 250px; */
+    width: 200px;
     background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 7, 32));
     opacity: .7;
-    /* border: 2px solid yellow; */
-    /* margin-bottom: 1rem; */
     
 }
 
@@ -23,7 +23,7 @@
 }
 .movie-overview .movie-description h1{
     font-size: 2.4rem;
-    line-height: 1;
+    line-height: 2;
 }
 .movie-overview .movie-description ul{
     display: flex;
@@ -47,6 +47,7 @@
 }
 .movie-overview .movie-description .author em{
     font-size: 1.1rem;
+    line-height: 1;
 }
 .movie-overview .movie-description .author{
     margin-bottom: 2rem;
