--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -8,7 +8,12 @@
     color: white;
     position: sticky;
     top: 0;
-    z-index: 10000;
+    z-index: 10000;    
+}
+
+.navbar-light{
+    background-color: white;
+    color: black;
 }
 
 .header .logo {
@@ -37,7 +42,8 @@
     font-size: 2rem;
     color: red;
 }
-.header h1 span{
+
+.header h1 span {
     font-size: 4rem;
     font-family: 'Nosifer', sans-serif;
     color: rgba(212, 7, 7, 0.817);
@@ -46,19 +52,24 @@
 .header .navbar {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .header .navbar li {
     list-style: none;
-    margin: 1rem;
-    padding: 1.4rem;
+    margin: .5rem;
+    padding: .6rem;
 }
 
-.header .navbar li a {
+.header .navbar li a:link, .header .navbar li a:active {
     font-size: 1.4rem;
     text-decoration: none;
     font-weight: bold;
     color: white;
+}
+.header .navbar li a:hover, .header .navbar span:hover{
+    color: rgba(212, 7, 7, 0.817);
+    transition: .5s ease;
 }
 
 .header .navbar li input {
@@ -76,32 +87,69 @@
     margin-right: 1rem;
     cursor: pointer;
 }
-.navbar .btn-logout{
+
+.navbar .btn {
     color: white;
-    /* height: 3.5rem; */
     cursor: pointer;
-    /* margin-right: 1rem; */
-    margin: 1rem;
-    padding: 1.4rem;
+    margin: .5rem;
+    padding: .6rem;
 }
-.navbar span{
+
+.navbar span {
     color: white;
+    cursor: pointer;
 }
+
 .active {}
+
+.search-container {
+    display: flex;
+    position: relative;
+
+}
+
+.search-container .search-input {
+    display: none;
+    width: 0;
+    overflow: hidden;
+    transition: all .5s;
+}
+.search-container #search::-webkit-search-cancel-button{
+    position:relative;
+    right:20px;  
+
+    /* -webkit-appearance: none; */
+    height: 20px;
+    width: 20px;
+    border-radius:10px;
+    /* background: red;  */
+    cursor: pointer;
+
+}
+.expand {
+    position: absolute;
+    top: 130%;
+    transform: translate(-60%);
+    display: inline-block;
+    width: 300px;
+    height: 50px;
+    font-size: 1.5rem;
+    color: black;
+}
 
 /* --------------- Navbar Responsive ---------------------- */
 @media screen and (max-width: 657px) {
 
     .header {
-           display: inline-block;
-           width: 100%;
-           height: auto;
-           /* background-color: lightcyan; */
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        /* background-color: lightcyan; */
     }
 
     .header .logo,
     .header .logo.btn-nav {
-           padding: 1.8rem;
+        padding: 1.8rem;
     }
 
     /* .header nav .link{
@@ -109,31 +157,30 @@
      }
    */
     .header nav {
-           display: none;
+        display: none;
     }
 
     .header .navbar {
-           display: flex;
-           flex-direction: column;
+        display: flex;
+        flex-direction: column;
     }
 
     .header .active {
-           display: flex;
-           width: 100%;
-           justify-content: center;
-           align-items: center;
-           transition: 1s all ease;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        transition: 1s all ease;
     }
 
     .header .active .navbar li {
-           border: 1px solid green;
-           width: 100%;
-           display: block;
-           text-align: center;
+        border: 1px solid green;
+        width: 100%;
+        display: block;
+        text-align: center;
     }
 
     .header #btn-nav {
-           display: block;
+        display: block;
     }
 }
-
