--- a/src/components/styles/overview.css
+++ b/src/components/styles/overview.css
@@ -2,6 +2,7 @@
     display: flex;
     gap: 1rem;
     width: 100%;
+    /* height: 100vh; */
     justify-content: center;
     align-items: center;
 }
@@ -13,7 +14,7 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    height: 80vh;
+    height: 90vh;
     overflow-y: scroll;
 }
 
@@ -22,9 +23,11 @@
 }
 
 .overview .preview-card {
-    margin-top: 0;
-    width: 35%;
-    height: 80vh;
+    margin-top: 1rem;
+    width: 30%;
+    height: auto;
+    /* border: 1px solid red; */
+    margin-bottom: 1rem;
 }
 
 /* ------------------------- Responsive design ------------------- */
