--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,9 @@ body {
   background-color: black;
 
 }
-
+h1{
+  font-family: 'Libre Franklin', sans-serif;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
