--- a/src/components/styles/carousel.css
+++ b/src/components/styles/carousel.css
@@ -91,3 +91,148 @@
    background-color: rgba(250, 11, 11, 0.863);
    transition: .7s ease;
 }
+
+
+/* ----------------- Responsive Design ------------------------------------------------------ */
+@media screen and (max-width: 943px){
+    .carousel .carousel-content h1 {
+        font-size: 3rem;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+    
+    .carousel .carousel-content p {
+        font-size: 2rem;
+        text-align: center;
+        line-height: 1.5;
+        margin-bottom: .5rem;
+    }
+    
+    .carousel .carousel-content em {
+        font-size: 1.5rem;
+        text-align: center;
+        line-height: 2;
+    }
+    
+    .carousel .carousel-content input[type="email"] {
+        width: 250px;
+        height: 4rem;
+        border: 1px solid grey;
+        margin-top: 1rem;
+        padding: 1rem;
+        font-size: 1.2rem;
+       }
+       
+       .carousel .carousel-content input::placeholder {
+              color: white;
+              font-size: 1.2rem;
+              text-align: left;
+              top: 0;
+              
+       }
+       .carousel .carousel-content input:focus::placeholder{
+              font-size: 1.2rem;
+              /* transition: .6s ease; */
+              line-height: 3;
+    }
+    
+    
+    .carousel .carousel-content input[type="submit"] {
+        height: 4rem;
+        margin-left: .5rem;
+        width: 10rem;
+    }
+}
+
+@media screen and (max-width: 731px){
+    .carousel .carousel-content h1 {
+        font-size: 2.5rem;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: .5rem;
+    }
+    
+    .carousel .carousel-content p {
+        font-size: 1.5rem;
+        text-align: center;
+        line-height: 1;
+        margin-bottom: .5rem;
+    }
+    
+    .carousel .carousel-content em {
+        font-size: 1.2rem;
+        text-align: center;
+        line-height: 2;
+    }
+    
+    .carousel .carousel-content input[type="email"] {
+        width: 200px;
+        height: 4rem;
+        border: 1px solid grey;
+        margin-top: .5rem;
+        padding: .5rem;
+       }
+       
+    .carousel .carousel-content input[type="submit"] {
+        height: 4rem;
+        margin-left: .5rem;
+        width: 8rem;
+    }
+}
+
+@media screen and (max-width: 581px){
+    .carousel .carousel-content h1 {
+        font-size: 2rem;
+        margin-bottom: .5rem;
+        line-height: 2;
+    }
+    
+    .carousel .carousel-content p {
+        font-size: 1.2rem;
+        line-height: 1;
+    }
+    
+    .carousel .carousel-content em {
+        font-size: 1rem;
+    }
+    
+    .carousel .carousel-content input[type="email"] {
+        width: 150px;
+       }
+       
+    .carousel .carousel-content input[type="submit"] {
+        height: 4rem;
+        margin-left: .5rem;
+    }
+}
+
+@media screen and (max-width: 513px){
+    .carousel .carousel-content {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 345px){
+    .carousel{
+        width: 100%;
+        height: 60vh;
+    }
+    .carousel .carousel-content form{
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        justify-content: center;
+        align-items: center;
+    }
+    .carousel .carousel-content input[type="email"] {
+        width: 20rem;
+       }
+       
+    .carousel .carousel-content input[type="submit"] {
+        height: 4rem;
+        margin-left: .5rem;
+        width: 21rem;
+
+    }
+}
