--- a/src/components/styles/landingpage.css
+++ b/src/components/styles/landingpage.css
@@ -20,7 +20,7 @@
     padding: 3rem;
     /* border: none; */
     border-bottom: 5px solid gray;
-    height: 600px;
+    height: 50rem;
 }
 
 .description-box img {
@@ -51,45 +51,42 @@
 
 /* ------------------ Responsisve ---------------------------- */
 
-@media screen and (max-width: 940px) {
-    .home-container {
-        margin-bottom: 4rem;
-        /* border: 2px solid red; */
-        
-    }
+@media screen and (max-width: 1000px) {
     .home-container .description-box{
-        border: 2px solid blue;
-        position: relative;
+        height: 50rem;
+        text-align: center;
     }
-    .description-box img{
-        /* border: 2px solid blue; */
-    }
-    .description-box .content{
-        /* border: 2px solid blue; */
-    }
-}
-
-@media screen and (max-width: 800px){
-    .home-container .description-box{
-        /* background-color: yellow; */
+    .home-container #box-1, .home-container #box-3, .home-container #box-5 {
         display: flex;
         flex-direction: column;
-        position: relative;
-        justify-content: center;
-        align-items: center;
-        width: 100vw;
-        min-height: 80vh;
-    }
-    .description-box .content{
-        width: 90%;
-    }
-    .description-box img{
-        /* position: absolute; */
-        width: 300px;
-    }   
-    .description-box .content-alignment{
-        position: absolute;
-        top: 0;
     }
     
+    .home-container #box-2, .home-container #box-4 {
+        flex-direction: column-reverse;
+    }
+    .description-box .content {
+        width: 90%;
+    }
+    .description-box .feature-img-contaianer {
+        width: 90%;
+    }
+    
+    
+}
+
+@media screen and (max-width: 464px) {
+    .description-box .content {
+        width: 98%;
+    }
+    .description-box img {
+        width: 300px;
+    }
+}
+@media screen and (max-width: 422px) {
+    .description-box .content {
+        width: 98%;
+    }
+    #box-4 img {
+        width: 250px;
+    }
 }
