--- a/src/components/styles/favList.css
+++ b/src/components/styles/favList.css
@@ -3,5 +3,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 1.2rem;
+    border: 1px solid red;
 }
