--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -1,3 +1,12 @@
+.about{
+    color: black;
+    background-color: white;
+    height: 100vh;
+}
 .about h1{
+    color: black;
+}
+.aboutTest h1{
     font-size: 3rem;
+    color: white;
 }
