--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -6,3 +6,14 @@
     width: 100%;
 }
 
+.light-home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: black;
+    background: white;
+    color: white;
+    border: 2px solid red;
+}
