--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -4,60 +4,104 @@
     position: relative;
 }
 .card img{
-    /* width: 100%; */
-    /* height: 100%; */
-    width: 150px;
+    width: 15rem;
     border-radius: 0.2rem;
 }
 .card:hover{
     transform: scale(1.2);
     cursor: pointer;
     transition: transform .5s ease;
-    /* backdrop-filter: blur(100px); */
+}
+.card .poster{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .card .card-content{
-    background: linear-gradient(rgba(0, 0, 0, 0.623), rgba(0, 0, 0, 0.692), rgba(1, 7, 32, 0.811));
-    font-size: 1rem;
-    position: absolute;
-    text-align: center;
+    /* background: linear-gradient(rgba(0, 0, 0, 0.623), rgba(0, 0, 0, 0.692), rgba(1, 7, 32, 0.811)); */
     display: none;
-    /* width: 100%; */
-    height: 40px;
-    top: 60%;
-    
-    
+    position: relative;
 }
-
-
+.card .card-content h1{
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+}
+.card .card-content ul{
+    list-style: none;
+    text-align: left;
+}
+.card .card-content .buttons{
+    display: flex;
+    gap: 1rem;
+    position: absolute;
+    bottom: 2rem;
+}
+.card .card-content .card-btn{
+    font-size: 2rem;
+}
+.card .card-content .card-btn:hover{
+    color: red;
+    cursor: pointer;
+}
 
 /* ------------ Responsive ----------------------- */
-@media screen and (max-width: 572px) {
+@media screen and (max-width: 772px) {
     .card{
-        width: 25rem;
-        margin: 1.5rem;
-        padding: 1rem;
-        height: auto;
-        position: inherit;
-        margin-bottom: 2rem;
-        /* height: 500px; */
-        
+        margin-top: 3rem;
     }
-
+    .card:hover{
+        cursor: default;
+    }
     .card .card-content{
-        position: inherit;
-        display: block;
+        background: linear-gradient(rgba(116, 127, 130, 0.623), rgba(0, 0, 0, 0.692), rgba(30, 48, 120, 0.811));
+        display: flex;
+        /* background: lightblue; */
+        font-size: 1rem;
+        height: 20rem;
+        width: 13rem;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        border-radius: .5rem;
     }
 }
-@media screen and (max-width: 400px) {
-    .card{
-        width: 80%;
-        margin: 3rem 0rem 3rem 0rem;
-        /* padding: 2rem; */
-        border: 2px solid red;        
-    }
 
+@media screen and (max-width: 665px) {
+    .card img{
+        width: 23rem;
+    }
     .card .card-content{
-        position: inherit;
-        display: block;
+        width: 20rem;
+        height: 30rem;
+    }
+    .card .card-content h1{
+        font-size: 2rem;
+    }
+    .card .card-content  .card-btn{
+        font-size: 2.3rem;
     }
 }
+
+@media screen and (max-width: 575px) {
+    .card img{
+        width: 20rem;
+    }
+    .card .card-content{
+        width: 17rem;
+        height: 25rem;
+    }
+}
+@media screen and (max-width: 394px) {
+    .card img{
+        width: 18rem;
+    }
+    .card .card-content{
+        width: 15rem;
+        height: 25rem;
+    }
+    .card:hover{
+        transform: scale(1.1);
+    }
+}
+
