--- a/src/components/styles/cardOvervies.css
+++ b/src/components/styles/cardOvervies.css
@@ -8,12 +8,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 1rem;
 }
 
 .movie-poster .movie-poster-img{
     width: 200px;
     background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgb(1, 7, 32));
-    opacity: .7;
+    /* opacity: .7; */
     
 }
 
@@ -91,3 +92,19 @@
 
 }
 
+
+/* -------------- Dark theme ------------------- */
+#movie-overview-light{
+    background: #e7f5ff;
+    color: black;
+    border: 1px solid rgba(128, 128, 128, 0.164);
+}
+#movie-description-light h1, #movie-description-light li{
+    color: black;
+}
+#movie-description-light span{
+    color: black;
+}
+#movie-description-light span:hover{
+    color: red;
+}
