--- a/src/components/styles/favList.css
+++ b/src/components/styles/favList.css
@@ -5,5 +5,22 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 1.2rem;
+    min-height: 85vh;
+}
+.fav-list h2{
+    font-size: 2rem;
+    /* border: .2rem solid red; */
+    padding: 2rem;
+    border-radius: .5rem;
+}
+.fav-list h2 a{
+    text-decoration: none;
+    font-size: 2rem;
     border: 1px solid red;
+    padding: 1rem;
+    border-radius: 1rem;
+}   
+#fav-list-light{
+    background: #f1f3f5;
+    color: black;
 }
