Some Styling and update

--- a/src/components/styles/carousel.css
+++ b/src/components/styles/carousel.css
@@ -93,6 +93,8 @@
 }
 
 
+/* ---------------------- Theme ------------------ */
+
 /* ----------------- Responsive Design ------------------------------------------------------ */
 @media screen and (max-width: 943px){
     .carousel .carousel-content h1 {
