--- a/src/components/styles/favList.css
+++ b/src/components/styles/favList.css
@@ -3,13 +3,15 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 1.2rem;
-    min-height: 85vh;
+    min-height: 80vh;
+    /* border: 1px solid red; */
+    text-wrap: wrap;
 }
 .fav-list h2{
     font-size: 2rem;
-    /* border: .2rem solid red; */
+    margin: 2rem;
     padding: 2rem;
     border-radius: .5rem;
 }
@@ -19,8 +21,40 @@
     border: 1px solid red;
     padding: 1rem;
     border-radius: 1rem;
+
 }   
 #fav-list-light{
     background: #f1f3f5;
     color: black;
+}
+
+/* --------------- theme ------------------ */
+#fav-list-light{
+    background: #edf2ff;
+    color: black;
+}
+#fav-list-light h2{
+    color: black;
+}
+#fav-list-light a{
+    color: darkred;
+}
+/* ---------------- Responsive ---------------------- */
+@media screen and (max-width: 525px) {
+    .fav-list h2{
+        font-size: 2rem;
+        line-height: 2;
+    }
+    .fav-list h2 a{
+        font-size: 1.5rem;
+        padding: .5rem;
+    }
+}
+@media screen and (max-width: 266px) {
+    .fav-list h2{
+        font-size: 1.8rem;
+    }
+    .fav-list h2 a{
+        font-size: 1.3rem;
+    }
 }
