--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -13,8 +13,6 @@
 }
 
 
-
-
 .header .logo {
     display: flex;
     justify-content: space-between;
@@ -50,7 +48,20 @@
     align-items: center;
     position: relative;
 }
-
+.header .search-bar{
+    display: none;
+}
+.header .search-bar input{
+    width: 30rem;
+    height: 4rem;
+    /* border: 1px solid blue; */
+    border: none;
+    font-size: 1.4rem;
+    padding: 1rem;
+    background: rgba(128, 193, 240, 0.288);
+    outline: none;
+    border-radius: .5rem;
+}
 .header .navbar li {
     list-style: none;
     margin: .5rem;
@@ -110,14 +121,17 @@
 .search-container #search::-webkit-search-cancel-button{
     position:relative;
     right:20px;  
-
-    /* -webkit-appearance: none; */
     height: 20px;
     width: 20px;
     border-radius:10px;
-    /* background: red;  */
     cursor: pointer;
+}
 
+.search-result{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 /* --------------------- Search bar toggle -----------------------------  */
 
@@ -148,6 +162,9 @@
 #nav-toggler{
     color: black;
 }
+#navbar-light .search-bar input{
+    color: black;
+}
 
 /* --------------- Navbar Responsive ---------------------- */
 @media screen and (max-width: 657px) {
@@ -156,9 +173,13 @@
         display: inline-block;
         width: 100%;
         background: black;
-        position: relative;
+        position: sticky;
     }
-
+    
+    .header .search-bar input{
+        width: 25rem;
+        height: 4rem;
+    }
     .header .logo,
     .header .logo.btn-nav {
         padding: 1rem;
@@ -171,7 +192,12 @@
     .header .navbar {
         display: flex;
         flex-direction: column;
+        
     }
+    .header .search-bar{
+        display: block;
+    }
+    
 
     .header .active {
         display: flex;
@@ -194,6 +220,7 @@
     #expand{
         transform: translate(20%);
     }
+    
 
 }
 
@@ -207,3 +234,50 @@
         font-size: 3.2rem;
     }
 }
+
+@media screen and (max-width: 499px) {
+    .header .search-bar input{
+        width: 20rem;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .header .search-bar input{
+        /* width: 15rem; */
+    }
+
+    .header h1 {
+        font-size: 1.4rem;
+    }
+    
+    .header h1 span {
+        font-size: 3.5rem;
+    }
+}  
+
+@media screen and (max-width: 371px) {
+    
+
+    .header h1 {
+        font-size: 1.3rem;
+    }
+    
+    .header h1 span {
+        font-size: 3rem;
+    }
+}
+
+@media screen and (max-width: 347px) {
+    
+    .header .search-bar input{
+        width: 13rem;
+    }
+    .header h1 {
+        font-size: 1.2rem;
+    }
+    
+    .header h1 span {
+        font-size: 2.6rem;
+    }
+}
+
