--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("../../img/login-bg.jpg");
+    background-image: url("../../assets/img/login-bg.jpg");
     opacity: .8;
     background-repeat: no-repeat;
     background-size: cover;
